			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01ag: *********************************

BUG: (10/29/04, DN) Ncc regression fails, because Network tool doesn't ignore
  resistors properly.
FIX: Netlist.getNetlist(Nodable) returns sublist with "shortResistors" from parent
     netlist instead of user preferences. Removed "getUserNetlist" calls from Hierarchy
     enumerator.

IMP: (10/28/04, GVG) Bug fix in hierarchical checking for minArea

IMP: (10/28/04, SMR) Renaming a cell such that it is the same as an existing one makes it a new version.

************************* Version 8.01af: *********************************

IMP: (10/28/04, SMR) Added SUE input.

BUG: (10/28/04, SMR) Rotated text is not read back from JELIB files.
FIX: Rotation amounts are now set properly.

IMP: (10/28/04, SMR) When a cell is renamed and it appears to fall into an existing cell group,
     the user is asked if it should also be re-grouped.

IMP: (10/28/04, SMR) In-place text editing can now handle multi-line parameters.

BUG: (10/27/04, SMR) Variables on cell instances are not offset properly.
FIX: Use untransformed node bounds when computing text location.

BUG: (10/28/04, DN) IgnoreResitors option connects incorrectly.
FIX: In NetSchem.internalConnections replace "drawn" by "drawnOffsets[drawn]"

IMP/MAN: (10/27/04, GVG) New scheme in TechPalette, Schematic. Extra text in well contacts.

BUG: (10/27/04, SMR) Pasting primitives does not adjust sizes right (shifts their positions instead).
FIX: In "Clipboard.pasteNodeToNode()" fixed this.

BUG: (10/27/04, SMR) Sweeps in Spice are time-aligned with each other, which is wrong.
FIX: Each sweep can now have its own time values.

************************* Version 8.01ae: *********************************

FIX: (10/27/04, JKG) Added code in LibraryFiles.readExternalLibraryFromFilename to handle
     references to other library formats.
