@@ -4,6 +4,13 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.01ag: *********************************
 
+BUG: (10/29/04, DN) Network tool and user tool doesn't feel rename of Exports and Cells.
+FIX: Add parameter "oldVersion" to "renameObject" methods of these tools.
+
+FIX: Netlist.getNetlist(Nodable) returns sublist with "shortResistors" from parent
+     netlist instead of user preferences. Removed "getUserNetlist" calls from Hierarchy
+     enumerator.
+
 BUG: (10/29/04, DN) Ncc regression fails, because Network tool doesn't ignore
   resistors properly.
 FIX: Netlist.getNetlist(Nodable) returns sublist with "shortResistors" from parent
